Update CMakeLists to new ACTS

--- a/MagneticField/CMakeLists.txt
+++ b/MagneticField/CMakeLists.txt
@@ -4,11 +4,10 @@
 
 gaudi_subdir(MagneticField v1r0)
 
-gaudi_depends_on_subdirs(GaudiKernel
- 						 Math)
+gaudi_depends_on_subdirs(GaudiKernel)
 
-find_package(ACTS COMPONENTS Core)
-#workaround for the lone -lGeom flag exported by ACTS
+find_package(Acts COMPONENTS Core)
+#workaround for the lone -lGeom flag exported by Acts
 link_directories(${ROOT_INCLUDE_DIR}/../lib)
 
 find_package(ROOT COMPONENTS RIO Tree REQUIRED)
@@ -17,5 +16,5 @@ gaudi_install_headers(MagneticField)
 
 gaudi_add_module(MagneticField
                  src/components/*.cpp
-                 INCLUDE_DIRS GaudiKernel ROOT ACTS Math
-                 LINK_LIBRARIES GaudiKernel ROOT ACTS::ACTSCore)
+                 INCLUDE_DIRS GaudiKernel ROOT Acts
+                 LINK_LIBRARIES GaudiKernel ROOT ActsCore)
