--- a/Test/TestMagneticField/CMakeLists.txt
+++ b/Test/TestMagneticField/CMakeLists.txt
@@ -5,12 +5,11 @@
 gaudi_subdir(TestMagneticField v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
- 						 Math
  						 MagneticField
  						 Sim/SimG4Common
  						 Sim/SimG4Interface)
 
-find_package(ACTS COMPONENTS Core)
+find_package(Acts COMPONENTS Core)
 #workaround for the lone -lGeom flag exported by ACTS
 link_directories(${ROOT_INCLUDE_DIR}/../lib)
 find_package(Geant4)
@@ -22,8 +21,8 @@ gaudi_install_headers(TestMagneticField)
 
 gaudi_add_module(TestMagneticField
                  src/components/*.cpp
-                 INCLUDE_DIRS GaudiKernel ROOT ACTS Math MagneticField SimG4Common SimG4Interface Geant4
-                 LINK_LIBRARIES GaudiKernel ROOT ACTS::ACTSCore SimG4Common Geant4)
+                 INCLUDE_DIRS GaudiKernel ROOT Acts MagneticField SimG4Common SimG4Interface Geant4
+                 LINK_LIBRARIES GaudiKernel ROOT ActsCore SimG4Common Geant4)
                  
 include(CTest)
 gaudi_add_test(TestBFieldG4
