Remove $ENV{PODIO} from tests
- FindPODIO.cmake defines ${PODIO_PYTHON_DIR}
- ${PODIO_PYTHON_DIR} is now used instead of $ENV{PODIO}/python

--- a/Detector/DetComponents/CMakeLists.txt
+++ b/Detector/DetComponents/CMakeLists.txt
@@ -38,7 +38,7 @@ gaudi_add_test(positionsInclinedEcal
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/positions_inclinedEcal.py)
 gaudi_add_test(positionsInclinedEcalCheck
-               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                COMMAND python Detector/DetComponents/tests/scripts/check_inclinedEcal_positions.py
                DEPENDS positionsInclinedEcal)
@@ -49,7 +49,7 @@ gaudi_add_test(positionsPositiveCaloEndcap
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/positions_endcap.py)
 gaudi_add_test(positionsPositiveCaloEndcapCheck
-               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                COMMAND python Detector/DetComponents/tests/scripts/check_endcapEcal_sublayer_positions.py
                DEPENDS positionsPositiveCaloEndcap)
@@ -57,7 +57,7 @@ gaudi_add_test(positionsNegativeCaloEndcap
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/positions_negativeEndcap.py)
 gaudi_add_test(positionsNegativeCaloEndcapCheck
-               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                COMMAND python Detector/DetComponents/tests/scripts/check_negativeEndcapEcal_sublayer_positions.py
                DEPENDS positionsNegativeCaloEndcap)
