--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,18 +16,19 @@ find_package(GaudiProject)
 #---------------------------------------------------------------
 
 configure_file(cmake/fccrun.in ${CMAKE_BINARY_DIR}/fccrun)
+configure_file(cmake/this_fccsw.sh.in ${CMAKE_BINARY_DIR}/this_fccsw.sh)
+
 install(FILES ${CMAKE_BINARY_DIR}/fccrun
         DESTINATION .
         PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
                     GROUP_EXECUTE GROUP_READ
                     WORLD_EXECUTE WORLD_READ
         RENAME run)
-install(FILES ${CMAKE_BINARY_DIR}/this_fccsw.sh.in
+install(FILES ${CMAKE_BINARY_DIR}/this_fccsw.sh
         DESTINATION .
         PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
                     GROUP_EXECUTE GROUP_READ
-                    WORLD_EXECUTE WORLD_READ
-        RENAME this_fccsw.sh)
+                    WORLD_EXECUTE WORLD_READ)
 
 gaudi_project(FCCSW HEAD
               USE Gaudi v29r2 )
