--- a/Detector/DetFCChhTrackerTkLayout/CMakeLists.txt
+++ b/Detector/DetFCChhTrackerTkLayout/CMakeLists.txt
@@ -22,8 +22,8 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/triplet DESTINATION Detector/DetFCCh
 
 gaudi_add_module(DetFCChhTrackerTkLayout
                  src/*.cpp
-                 INCLUDE_DIRS DD4hep ROOT Geant4 DetCommon Eigen  Acts
-                 LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 DetCommon ActsCore ActsDD4hepPlugin ActsDigitizationPlugin)
+                 INCLUDE_DIRS FWCore DD4hep ROOT Geant4 DetCommon Eigen  Acts
+                 LINK_LIBRARIES FWCore GaudiKernel DD4hep ROOT Geant4 DetCommon ActsCore ActsDD4hepPlugin ActsDigitizationPlugin)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
