--- a/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
@@ -7,7 +7,7 @@ gaudi_subdir(RecFCChhCalorimeter v1r0)
 gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Detector/DetSegmentation Detector/DetCommon Reconstruction/RecInterface Reconstruction/RecCalorimeter)
 
 find_package(FastJet)
-find_package(ROOT COMPONENTS Physics)
+find_package(ROOT COMPONENTS Physics Tree)
 find_package(FCCEDM)
 find_package(PODIO)
 find_package(HepMC)
@@ -16,8 +16,8 @@ find_package(Geant4)
 
 gaudi_add_module(RecFCChhCalorimeterPlugins
                  src/components/*.cpp
-                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter RecFCChhCalorimeter
-                 LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon ${DD4hep_COMPONENT_LIBRARIES})
+                 INCLUDE_DIRS FWCore FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter RecFCChhCalorimeter
+                 LINK_LIBRARIES FWCore Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon)
 
 include(CTest)
 
