--- a/cmake/setup.sh.in
+++ b/cmake/setup.sh.in
@@ -1,11 +1,17 @@
 #!/bin/bash
 
 # get path to script
-export FCCSWBASEDIR="$( cd "$(dirname "$0")" ; pwd -P )"
-export FCC_DETECTORS=$FWCCSWBASEDIR
+export FCCSWBASEDIR=@CMAKE_INSTALL_PREFIX@
+export FCC_DETECTORS=$FCCSWBASEDIR
 export FCC_PYTHIACARDS=$FCCSWBASEDIR
 
 export PATH=$PATH:$FCCSWBASEDIR/scripts:$FCCSWBASEDIR/bin
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$FCCSWBASEDIR/lib
 export PYTHONPATH=$PYTHONPATH:$FCCSWBASEDIR/lib:$FCCSWBASEDIR/python
 export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$FCCSWBASEDIR
+
+
+# make sure gaudi scripts and modules are available
+export PYTHONPATH=$PYTHONPATH:$FCCVIEW/lib:$FCCVIEW/python
+export PATH=$PATH:$FCCVIEW/scripts:$FCCVIEW/bin
+
