Install job options and datafiles to share/

--- a/Detector/DetFCCehBaseline1/CMakeLists.txt
+++ b/Detector/DetFCCehBaseline1/CMakeLists.txt
@@ -3,4 +3,4 @@
 ################################################################################
 gaudi_subdir(DetFCCehBaseline1 v1r0)
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION Detector/DetFCCehBaseline1)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCCehBaseline1)
