--- a/Detector/DetFCChhHCalTile/CMakeLists.txt
+++ b/Detector/DetFCChhHCalTile/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(Geant4)
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION Detector/DetFCChhHCalTile)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCChhHCalTile)
 
 
 gaudi_add_module(DetFCChhHCalTile
