Change share/ install dir to share/FCCSW

--- a/Detector/DetFCCehTrackerTkLayout/CMakeLists.txt
+++ b/Detector/DetFCCehTrackerTkLayout/CMakeLists.txt
@@ -7,4 +7,4 @@ gaudi_depends_on_subdirs(GaudiKernel Detector/DetCommon)
 
 
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCCheTrackerTkLayout)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCheTrackerTkLayout)
