--- a/Detector/DetFCCeeIDEA/CMakeLists.txt
+++ b/Detector/DetFCCeeIDEA/CMakeLists.txt
@@ -15,7 +15,7 @@ include( DD4hep )
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCCeeIDEA)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeIDEA)
 
 gaudi_add_module(DetFCCeeIDEA
 		  src/*.cpp
