--- a/Detector/DetFCChhBaseline1/CMakeLists.txt
+++ b/Detector/DetFCChhBaseline1/CMakeLists.txt
@@ -3,4 +3,4 @@
 ################################################################################
 gaudi_subdir(DetFCChhBaseline1 v1r0)
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCChhBaseline1)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCChhBaseline1)
