--- a/Detector/DetFCChhCalDiscs/CMakeLists.txt
+++ b/Detector/DetFCChhCalDiscs/CMakeLists.txt
@@ -12,7 +12,7 @@ include( DD4hep )
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCChhCalDiscs)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCChhCalDiscs)
 
 gaudi_add_module(DetFCChhCalDiscs
                  src/*.cpp
