Install FCCee to proper directory

--- a/Detector/DetFCCeeHCalTile/CMakeLists.txt
+++ b/Detector/DetFCCeeHCalTile/CMakeLists.txt
@@ -9,6 +9,6 @@ gaudi_depends_on_subdirs(GaudiKernel)
 
 
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION Detector/DetFCCeeHCalTile)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeHCalTile)
 
 
