--- a/Detector/DetStudies/CMakeLists.txt
+++ b/Detector/DetStudies/CMakeLists.txt
@@ -18,6 +18,8 @@ gaudi_add_module(DetStudies
                  INCLUDE_DIRS GaudiKernel ROOT DD4hep FWCore CLHEP
                  LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_COMPONENT_LIBRARIES} FWCore CLHEP)
 
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/DetStudies)
+
 include(CTest)
 gaudi_add_test(samplingFractionInclinedEcal
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
