--- a/Reconstruction/RecDriftChamber/CMakeLists.txt
+++ b/Reconstruction/RecDriftChamber/CMakeLists.txt
@@ -19,6 +19,8 @@ gaudi_add_module(RecDriftChamberPlugins
                  INCLUDE_DIRS FWCore FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecDriftChamber
                  LINK_LIBRARIES FWCore Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon ${DD4hep_COMPONENT_LIBRARIES})
 
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/RecDriftChamber)
+
 include(CTest)
 
 
