Bugfix for installed detector xmls

--- a/Detector/DetFCCeeIDEA-LAr/CMakeLists.txt
+++ b/Detector/DetFCCeeIDEA-LAr/CMakeLists.txt
@@ -7,6 +7,6 @@ gaudi_depends_on_subdirs(GaudiKernel Detector/DetSegmentation)
 
 
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeIDEA)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeIDEA-LAr)
 
 
