--- a/cmake/setup.sh.in
+++ b/cmake/setup.sh.in
@@ -2,8 +2,9 @@
 
 # get path to script
 export FCCSWBASEDIR=@CMAKE_INSTALL_PREFIX@
-export FCC_DETECTORS=$FCCSWBASEDIR
-export FCC_PYTHIACARDS=$FCCSWBASEDIR
+export FCCSWSHAREDIR=$FCCSWBASEDIR/share/FCCSW
+export FCC_DETECTORS=$FCCSWSHAREDIR
+export FCC_PYTHIACARDS=$FCCSWSHAREDIR
 
 export PATH=$PATH:$FCCSWBASEDIR/scripts:$FCCSWBASEDIR/bin
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$FCCSWBASEDIR/lib:$FCCSWBASEDIR/lib64
