placate compiler warnings

--- a/Detector/DetCommon/CMakeLists.txt
+++ b/Detector/DetCommon/CMakeLists.txt
@@ -3,13 +3,11 @@
 ################################################################################
 gaudi_subdir(DetCommon v1r0)
 
-gaudi_depends_on_subdirs(GaudiKernel Detector/DetSegmentation)
+gaudi_depends_on_subdirs(Detector/DetSegmentation)
 
-find_package(DD4hep COMPONENTS DDG4 REQUIRED)
+find_package(DD4hep)
 find_package(Geant4)
 include(${Geant4_USE_FILE})
-
-
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 gaudi_add_library(DetCommon
