--- a/Test/TestReconstruction/CMakeLists.txt
+++ b/Test/TestReconstruction/CMakeLists.txt
@@ -3,16 +3,15 @@
 ################################################################################
 gaudi_subdir(TestReconstruction v1r0)
 
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore Detector/DetInterface Detector/DetCommon Detector/DetSegmentation)
+gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Detector/DetCommon Detector/DetSegmentation)
 find_package(Geant4)
 
 find_package(ROOT COMPONENTS Geom)
 find_package(Acts COMPONENTS Core)
 find_package(DD4hep)
 
-include(${Geant4_USE_FILE})
 
-gaudi_add_module(TestTestPlugins
+gaudi_add_module(TestReconstructionPlugins
                  src/*.cpp
                  INCLUDE_DIRS FWCore DetInterface TrackingUtils Geant4 DetCommon DetSegmentation GaudiKernel ActsCore
                  LINK_LIBRARIES FWCore GaudiAlgLib FWCore Geant4 TrackingUtils DetCommon DetSegmentation ActsCore)
