--- a/Detector/DetFCCeeIDEA/CMakeLists.txt
+++ b/Detector/DetFCCeeIDEA/CMakeLists.txt
@@ -3,16 +3,10 @@
 ################################################################################
 gaudi_subdir(DetFCCeeIDEA v1r0)
 
-gaudi_depends_on_subdirs(GaudiKernel Detector/DetSegmentation)
-
+gaudi_depends_on_subdirs(Detector/DetSegmentation)
 
 find_package(DD4hep COMPONENTS DDG4 REQUIRED)
 find_package(Geant4)
-include(${Geant4_USE_FILE})
-
-set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
-include( DD4hep )
-
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeIDEA)
