update tests: move hepmc.dat files to repo, update working directory

--- a/Test/TestReconstruction/CMakeLists.txt
+++ b/Test/TestReconstruction/CMakeLists.txt
@@ -18,7 +18,7 @@ gaudi_add_module(TestReconstructionPlugins
 
 include(CTest)
 gaudi_add_test(LookForNeighbours
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestReconstruction/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/testneighbours.py)
 
 gaudi_add_test(CountCellsXYZ
