only build tests if BUILD_TESTING

--- a/Test/TestGeneration/CMakeLists.txt
+++ b/Test/TestGeneration/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(NOT BUILD_TESTING)
+  return()
+endif()
+
 ################################################################################
 # Package: TestGeneration
 ################################################################################
