--- a/Test/TestReconstruction/CMakeLists.txt
+++ b/Test/TestReconstruction/CMakeLists.txt
@@ -1,3 +1,6 @@
+if(NOT BUILD_TESTING)
+  return()
+endif()
 ################################################################################
 # Package: TestReconstruction
 ################################################################################
