--- a/Detector/DetFCCeeIDEA/CMakeLists.txt
+++ b/Detector/DetFCCeeIDEA/CMakeLists.txt
@@ -14,7 +14,7 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_
 gaudi_add_module(DetFCCeeIDEA
 		  src/*.cpp
 		  INCLUDE_DIRS DD4hep ROOT Geant4 DetSegmentation
-		  LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 DetSegmentation)
+		  LINK_LIBRARIES GaudiKernel DD4hep ROOT DetSegmentation)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
