works with LCG_97_FCC_2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,20 @@ if (SAS)
         )
 endif(SAS)
 
+option(ENABLE_CPACK "Whether to enable CPack." OFF)
+if(ENABLE_CPACK)
+  include(CPack)
+  include(cmake/FCCSWCPack.cmake)
+endif()
+
 
 #---------------------------------------------------------------
 # to use ROOT targets, find_package ROOT must come before find_package Gaudi
 # (for now) # see issue Gaudi#103
-find_package(ROOT COMPONENTS Geom)
+find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
+find_package(DD4hep COMPONENTS DDG4 DDRec REQUIRED)
+find_package(Geant4)
+
 
 # Load macros and functions for Gaudi-based projects
 find_package(GaudiProject)
@@ -62,5 +71,9 @@ install(FILES ${CMAKE_BINARY_DIR}/setup.sh
                     GROUP_READ
                     WORLD_READ)
 
+
+
 gaudi_project(FCCSW  v0r12
               USE Gaudi v32r2 )
+
+
