--- a/Detector/DetCommon/CMakeLists.txt
+++ b/Detector/DetCommon/CMakeLists.txt
@@ -5,8 +5,8 @@ gaudi_subdir(DetCommon v1r0)
 
 gaudi_depends_on_subdirs(Detector/DetSegmentation)
 
-find_package(DD4hep)
-find_package(Geant4)
+
+
 include(${Geant4_USE_FILE})
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
@@ -15,7 +15,7 @@ gaudi_add_library(DetCommon
                  INCLUDE_DIRS DD4hep ROOT Geant4 DetSegmentation
                  LINK_LIBRARIES GaudiKernel DD4hep ROOT DetSegmentation
                  PUBLIC_HEADERS DetCommon)
-target_link_libraries(DetCommon ${GEANT4_LIBRARIES})
+target_link_libraries(DetCommon ${Geant4_LIBRARIES} DD4hep::DDG4)
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetCommon)
 
