--- a/Reconstruction/RecDriftChamber/CMakeLists.txt
+++ b/Reconstruction/RecDriftChamber/CMakeLists.txt
@@ -11,8 +11,8 @@ find_package(ROOT COMPONENTS Physics)
 find_package(FCCEDM)
 find_package(PODIO)
 find_package(HepMC)
-find_package(DD4hep)
-find_package(Geant4)
+
+
 
 gaudi_add_dictionary(RecDriftChamber src/components/dictionary.h  src/components/dictionary.xml
                      LINK_LIBRARIES GaudiKernel ROOT)
@@ -21,7 +21,7 @@ gaudi_add_module(RecDriftChamberPlugins
                  src/components/*.cpp
                  INCLUDE_DIRS FWCore FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecDriftChamber
                  LINK_LIBRARIES FWCore Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation DetCommon ${DD4hep_COMPONENT_LIBRARIES})
-target_link_libraries(RecDriftChamberPlugins ${GEANT4_LIBRARIES})
+target_link_libraries(RecDriftChamberPlugins ${Geant4_LIBRARIES})
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/RecDriftChamber)
 
