--- a/Test/TestGeneration/CMakeLists.txt
+++ b/Test/TestGeneration/CMakeLists.txt
@@ -9,7 +9,7 @@ gaudi_subdir(TestGeneration v1r0)
 
 find_package(HepMC)
 
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore Generation)
+gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FCCFWCore Generation)
 
 gaudi_add_module(TestGenerationPlugins
                  src/components/*.cpp
