--- a/Detector/DetStudies/CMakeLists.txt
+++ b/Detector/DetStudies/CMakeLists.txt
@@ -4,7 +4,7 @@
 gaudi_subdir(DetStudies v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
-                         FWCore
+                         FCCFWCore
                          Detector/DetInterface)
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom Tree)
@@ -16,7 +16,7 @@ find_package(CLHEP)
 gaudi_add_module(DetStudies
                  src/components/*.cpp
                  INCLUDE_DIRS GaudiKernel ROOT DD4hep FWCore CLHEP
-                 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_COMPONENT_LIBRARIES} FWCore CLHEP)
+                 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_COMPONENT_LIBRARIES} FWCore CLHEP FCCEDM)
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/DetStudies)
 
