--- a/FCCFWCore/CMakeLists.txt
+++ b/FCCFWCore/CMakeLists.txt
@@ -1,27 +1,27 @@
 ################################################################################
-# Package: FWCore
+# Package: FCCFWCore
 ################################################################################
-gaudi_subdir(FWCore v1r0)
+gaudi_subdir(FCCFWCore v1r0)
 
-find_package(FCCEDM)
 find_package(podio)
-find_package(ROOT COMPONENTS RIO Tree)
+find_package(FCCEDM)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
+gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore)
 gaudi_install_scripts()
 gaudi_install_python_modules()
 
-gaudi_add_library(FWCore
-		  src/*.cpp
-                  INCLUDE_DIRS FCCEDM PODIO ROOT
-                  LINK_LIBRARIES GaudiAlgLib GaudiKernel FCCEDM ROOT
-                  PUBLIC_HEADERS FWCore)
-target_link_libraries(FWCore podio::podioRootIO)
-
-gaudi_add_module(FWCorePlugins
+#gaudi_add_library(FCCFWCore
+#		  src/*.cpp
+#                  INCLUDE_DIRS FCCEDM PODIO ROOT FWCore
+#                  LINK_LIBRARIES GaudiAlgLib GaudiKernel ROOT FCCEDM FWCore
+#                  PUBLIC_HEADERS FCCFWCore)
+#target_link_libraries(FCCFWCore podio::podioRootIO)
+#
+gaudi_add_module(FCCFWCorePlugins
                  src/components/*.cpp
-                 LINK_LIBRARIES GaudiAlgLib GaudiKernel FWCore ROOT)
+                 LINK_LIBRARIES GaudiAlgLib GaudiKernel FWCore FCCEDM ROOT FWCore)
+target_link_libraries(FCCFWCorePlugins podio::podioRootIO)
 
 gaudi_add_test(ProduceForReadTest
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
@@ -33,5 +33,5 @@ gaudi_add_test(ReadTest
 gaudi_add_test(CheckReadCollectionSize
                ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               COMMAND python FWCore/tests/scripts/check_coll_after_read.py
+               COMMAND python FCCFWCore/tests/scripts/check_coll_after_read.py
                DEPENDS ReadTest)
