--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,11 @@ endif()
 # (for now) # see issue Gaudi#103
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDRec REQUIRED)
-find_package(Geant4)
+find_package(Geant4 REQUIRED)
+find_package(fccedm REQUIRED)
+link_libraries(datamodelDict)
+find_package(EDM4HEP REQUIRED)
+#find_package(K4FWCore REQUIRED)
 
 
 # Load macros and functions for Gaudi-based projects
@@ -74,6 +78,7 @@ install(FILES ${CMAKE_BINARY_DIR}/setup.sh
 
 
 gaudi_project(FCCSW  v0r12
+              USE K4FWCore v0r1
               USE Gaudi v32r2 )
 
 
